--- a/style.css
+++ b/style.css
@@ -8,11 +8,12 @@
     padding-bottom: 10px;
 }
 .container{
-    margin-bottom: 100px;
+    margin-bottom: 10px;
 }
 .banner-background{
-    background-color: #FEEAE9;
+    background-color: white;
     border-radius: 10px;
+    box-shadow: 2px 2px 10px gray;
 }
 .carousel-item{
     padding: 20px 40px;
@@ -47,4 +48,84 @@
     }
     #subscribe{
         height: 300px;
+    }
+    #moments{
+        color: gold;
+    }
+    #memories{
+        color: silver;
+    }
+    .corossol{
+        margin-bottom: 100px;
+    }
+    .memory{
+        margin-bottom: 100px;
+    }
+    #colors{
+        margin-top: 100px;
+    }
+    .look-color{
+        margin-top: 150px;
+    }
+    .photo-album{
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .photo-frame{
+        width: 350px;
+        height: 250px;
+        border: 3px solid silver;
+        border-radius: 5px;
+        position: relative;
+        margin: 5px;
+        overflow: hidden;
+    }
+    .photo-frame .photo img{
+        width: 100%;
+    }
+    .photo-frame:hover .photo img{
+        transform: scale(1.2);
+        transition: transform 2s;
+    }
+    .photo-text{
+        position: absolute;
+        display: none;
+        width: 400px;
+        height: 300px;
+        top: 0;
+        color: rgba(245, 245, 245, 0.616);
+    }
+    .photo-frame:hover .photo-text{
+        display: block;
+    }
+    .photo-frame:hover .photo-text h2{
+        color: gray;
+        background-color: rgba(240, 255, 240, 0.705);
+    }
+    #food{
+        margin-top: 100px;
+    }
+    .body{
+        background-color: crimson;
+    }
+    .ending{
+        background-color: rgb(20, 20, 27);
+        color: white;
+    }
+    #useful-links{
+        margin-top: 50px;
+        margin-bottom: 20px;
+    }
+    #course-terms{
+        margin-top: 30px;
+        margin-bottom: 20px;
+    }
+    footer{
+        text-align: center;
+        color: lightgray;
+        margin-top: 30px;
+    }
+    .address{
+        margin-top: 50px;
+        margin-bottom: 50px;
     }
